--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="story app"
-      content="A choose your own adventure story about the Shadow House"
+      name="Shadowhouse"
+      content="Shadowhouse: A choose your own adventure story"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
